--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "npm run copy-env-development nest start",
+    "start:dev": "npm run copy-env-development && cross-env NODE_ENV=development nest start --watch",
+    "start:debug": "npm run copy-env-development && cross-env NODE_ENV=test nest start --debug --watch",
+    "start:prod": "npm run copy-env-production && cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/ormconfig.ts",
+    "migration:generate": "npm run typeorm migration:generate -- -n",
+    "migration:run": "npm run typeorm migration:run",
+    "copy-env-development": "cp env/.env.development .env",
+    "copy-env-production": "cp env/.env.production .env"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
