--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.4.2",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "argon2": "^0.26.2",
@@ -42,7 +43,9 @@
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "typeorm": "^0.2.25",
+    "typeorm-naming-strategies": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
