--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.4.2",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.0.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
@@ -37,7 +38,9 @@
     "connect-redis": "^4.0.4",
     "cross-env": "^7.0.2",
     "express-session": "^1.17.1",
+    "nanoid": "^3.1.9",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.2.1",
     "redis": "^3.0.2",
@@ -55,6 +58,7 @@
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
     "@types/passport": "^1.0.3",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
