--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "connect-redis": "^4.0.4",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "express-session": "^1.17.1",
     "nanoid": "^3.1.9",
@@ -54,6 +55,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
