--- a/env/.env.production
+++ b/env/.env.production
@@ -1,6 +1,6 @@
 APP_HOST=localhost
 APP_PORT=4100
-DB_NAME=dreamer-prod
+DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD="GojiWW12"
 DB_HOST=dreamer-prod.cmkzsahjwefe.eu-north-1.rds.amazonaws.com
