:muscle: vk redirect env variable

--- a/env/.env.development
+++ b/env/.env.development
@@ -13,3 +13,4 @@ AUTH_HEADER_TIME=600
 # 7days
 REFRESH_TOKEN_EXPIRES=604800
 CORS_URL=http://localhost:8080
+VK_REDIRECT=http://localhost:8080/account/vk-callback
