--- a/env/.env.production
+++ b/env/.env.production
@@ -12,3 +12,4 @@ JWT_TIME=10m
 REFRESH_TOKEN_EXPIRES=2592000
 COOKIE_NAME="dreamer_auth"
 CORS_URL=
+VK_REDIRECT=https://justadreamer.ru/account/vk-callback
