--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "csurf": "^1.11.0",
+    "date-fns": "^2.14.0",
     "express-session": "^1.17.1",
     "helmet": "^3.23.1",
     "nanoid": "^3.1.9",
@@ -58,6 +59,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
