--- a/env/.env.production
+++ b/env/.env.production
@@ -3,7 +3,7 @@ APP_PORT=4100
 DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD="GojiWW12"
-DB_HOST=dreamer-prod.cmkzsahjwefe.eu-north-1.rds.amazonaws.com
+DB_HOST=dreamer-prod.chdiswp15wtp.eu-central-1.rds.amazonaws.com
 DB_PORT=5432
 REDIS_HOST=//127.0.0.1:6379
 JWT_SECRET="fP0P#AS%a>P/Izus"
